[package]
name = "working-flares"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.3", default-features = false }
axum-cloudflare-adapter = "0.7.0"
serde = "1.0.188"
serde_json = "1.0.111"
tower-service = "0.3.2"
worker = { version = "0.0.18" }
oneshot = "0.1.6"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
